<resources>
    <string name="app_name">NutriGrow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- string resources -->
    <string name="auth_activity1">Buat rencana menanam dan pastikan tanamanmu aman dengan NutriGrow!</string>
    <string name="auth_activity2">Bergabunglah dengan kami sekarang juga!</string>
    <string name="auth_activity3">Login dengan Akun Google</string>
    <string name="auth_activity4">Dengan bergabung, artinya kamu telah menyetujui Syarat dan Ketentuan kami.</string>

    <string name="aigrow_activity2">Masukkan gambar daun dari tumbuhanmu, AIGrow akan menganalisis kondisi tumbuhanmu dan memberikan rekomendasi untuk tumbuhanmu!</string>

    <string name="profile_fragment1">Postingan</string>
    <string name="profile_fragment2">Diagnosis</string>

    <string name="default_web_client_id">69879537681-ta7557mi2q073kssd07el39vo9kdtld4.apps.googleusercontent.com</string>
    <string name="cloudinary_cloud_name">dm6bkhvyn</string>
    <string name="cloudinary_api_key">991948627825862</string>
    <string name="cloudinary_api_secret">-887M_T9Xl5MUyeP_KlZ8Vkc0Co</string>
    <string name="weather_api_key">e488df60706e4be181c172754251610</string>
    <string name="gemini_api_key">AIzaSyDfZnxDxyHr0qk-Ni5QUNC1y0WIk6PrZ7E</string>
</resources>